# PyOgmaNeo

./: .gitignore  .travis.yml  CHANGES.md  CMakeLists.txt  CONTRIBUTING.md  Example.py  ModuleTest.py  PYOGMANEO_LICENSE.md  README.md  Sequence.py  ogmaneo.i  setup.py
.travis/: install_opencl.sh  install_swig.sh
CMake/: FindOgmaNeo.cmake
